Fix a chart layout bug.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,9 +60,8 @@ h1 {
         column-count: 3;
     }
     .chartsContainer {
-        display: block;
-        column-gap: 20px;
-        column-count: 2;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -82,4 +81,19 @@ h1 {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+}
+
+.chartCard {
+    background-color: #2a2a2a;
+    border: 1px solid #444;
+    border-radius: 10px;
+    break-inside: avoid;
+    margin-bottom: 10px;
+}
+
+.chartCard:nth-child(odd) {
+    margin-right: 5px;
+}
+.chartCard:nth-child(even) {
+    margin-left: 5px;
 }
